samples/_failures_safe/1761508927_aaa227_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38c060d5.c: In function ‘main’:
./samples/SAFE/__tmp_38c060d5.c:186:5: error: expected declaration or statement at end of input
  186 |     }
      |     ^
